@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-04-26T01:40:06Z",
-  "count" : 8,
-  "count_minmax" : [ 7, 8 ],
+  "timestamp" : "2022-05-09T08:23:01Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 8 ],
   "count_prev_day_inc" : 7,
   "count_prev_day_dec" : 0,
-  "uniques" : 5,
-  "uniques_minmax" : [ 4, 5 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 5 ],
   "uniques_prev_day_inc" : 4,
   "uniques_prev_day_dec" : 0
 }
