@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-05-09T01:39:17Z",
+  "timestamp" : "2022-05-09T08:23:01Z",
   "count" : 0,
   "count_minmax" : [ 0, 0 ],
   "count_prev_day_inc" : 2,
-  "count_prev_day_dec" : 0,
+  "count_prev_day_dec" : 7,
   "uniques" : 0,
   "uniques_minmax" : [ 0, 0 ],
   "uniques_prev_day_inc" : 1,
-  "uniques_prev_day_dec" : 0
+  "uniques_prev_day_dec" : 4
 }
