@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-05-09T01:39:17Z",
+  "timestamp" : "2022-05-09T08:23:01Z",
   "count_outdated" : 138,
   "uniques_outdated" : 94,
-  "count" : 235,
-  "uniques" : 143,
+  "count" : 228,
+  "uniques" : 139,
   "clones" : [
     {
       "timestamp": "2022-04-25T00:00:00Z",
-      "count": 8,
-      "count_minmax": [ 7, 8 ],
-      "uniques": 5,
-      "uniques_minmax": [ 4, 5 ]
+      "count": 1,
+      "count_minmax": [ 1, 8 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 5 ]
     },
     {
       "timestamp": "2022-04-30T00:00:00Z",
