@@ -1,11 +1,11 @@
 {
-  "count": 97,
-  "uniques": 20,
+  "count": 90,
+  "uniques": 19,
   "clones": [
     {
       "timestamp": "2022-04-25T00:00:00Z",
-      "count": 8,
-      "uniques": 5
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-04-30T00:00:00Z",
