@@ -1,3 +1,9 @@
+2022-05-09T08:23:01Z:
+* notice: last 14d: all unq: 90 19
+* notice: prev accum: outdated-all outdated-unq / all unq: 138 94 / 235 143
+* notice: next accum: outdated-all outdated-unq / all unq: 138 94 / 228 139
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -4 -7 // +1 +2 / -4 -7
+
 2022-05-09T01:39:17Z:
 * notice: last 14d: all unq: 97 20
 * notice: prev accum: outdated-all outdated-unq / all unq: 138 94 / 233 142
